--- a/CMFTAspNet/Pages/Shared/_Layout.cshtml
+++ b/CMFTAspNet/Pages/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
             <div class="container">
                 <!-- Logo with "Let People Work" -->
                 <a class="navbar-brand d-flex align-items-center" asp-area="" asp-page="https://letpeople.work">
-                    <span style="font-family: 'Quicksand', sans-serif; color: black; font-weight: bold;">Let People&nbsp;</span>
-                    <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1); font-weight: bold;">Work</span>
+                    <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1); font-weight: bold;">Light</span>
+                    <span style="font-family: 'Quicksand', sans-serif; color: black; font-weight: bold;">house</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
